# ChangeLog for media-libs/mesa
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.38 2005/09/06 01:13:15 spyderous Exp $

  06 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>; mesa-6.3.2.ebuild:
  (#104367) Add xf86vidmodeproto and libICE to deps.

  04 Sep 2005; Luca Barbato <lu_zero@gentoo.org> mesa-6.3.2.ebuild:
  Marked ~ppc

  03 Sep 2005; Jeremy Huddleston <eradicator@gentoo.org>
  mesa-6.3.1.1-r3.ebuild, mesa-6.3.2.ebuild:
  Switching to use eselect over opengl-update.

  22 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>; mesa-6.3.2.ebuild:
  Split out an arch-specific variable DRI_DRIVERS_${ARCH} for defining which
  drivers to build. Put it up at the top, to try separating data from code.
  Perhaps doing something similar in pkg_setup(), but having if...elif and
  just DRI_DRIVERS, would work reasonably, but it doesn't isolate the data as
  well.

  22 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>; mesa-6.3.2.ebuild:
  Move EXTRA_LIB_PATH blanking out from within a sparc block, because it
  should be used for everyone. Also move arch-specific section away from
  generic sections.

*mesa-6.3.2 (22 Aug 2005)

  22 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +files/mesa-add-dri-asm-files.patch, +mesa-6.3.2.ebuild:
  Bump to latest devel release. The assembly files in DRI drivers didn't get
  packaged, so add mesa-add-dri-asm-files.patch to patch them in. I think this
  release will also fix 32/64 systems, if they also have the latest DRM.

  22 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -files/fix-include-locations.patch, -files/fix-xthreads-location.patch,
  -files/use-xthreads.patch, -mesa-6.3.1.1.ebuild, -mesa-6.3.1.1-r1.ebuild,
  -mesa-6.3.1.1-r2.ebuild:
  Pull old versions.

  20 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  mesa-6.3.1.1-r3.ebuild:
  Stop installing glut headers to avoid conflicts with virtual/glut providers.