@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/mesa
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.38 2005/09/06 01:13:15 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.39 2005/09/06 18:56:37 spyderous Exp $
+
+  06 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>;
+  mesa-6.3.1.1-r3.ebuild, mesa-6.3.2.ebuild:
+  Add missing 'set' argument to eselect.
 
   06 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>; mesa-6.3.2.ebuild:
   (#104367) Add xf86vidmodeproto and libICE to deps.
